# GPT-Neo-1.5b

./: CMakeLists.txt  CMakeLists.txtnvgcc  README.md  cachequeue.cpp  csvport.py  csvwirte.cpp  deser.cpp  deser.py  embed.cpp  embed.h  findwidget.qml  hashnodelru.cpp  index.py  infer.cu  init.cu  main.cpp  process.cpp  process.h  processfunc.cpp  qtfilewirte.cpp  qtfilewirte.h  ready.cu  runpackets.h  sopackets.h  sqconnect.cpp  sqconnect.h  strpackets.h  terminal.cpp  threads.cpp  val.sh
